--- a/configs.yaml
+++ b/configs.yaml
@@ -93,6 +93,15 @@ defaults:
   disag_units: 400
   disag_action_cond: False
 
+gym:
+  steps: 5e5
+  action_repeat: 1
+  envs: 4
+  train_ratio: 512
+  video_pred_log: false
+  encoder: {mlp_keys: '.*', cnn_keys: '$^'}
+  decoder: {mlp_keys: '.*', cnn_keys: '$^'}
+
 dmc_proprio:
   steps: 5e5
   action_repeat: 2
