--- a/configs.yaml
+++ b/configs.yaml
@@ -78,6 +78,7 @@ defaults:
   discount: 0.997
   discount_lambda: 0.95
   mvpi_lambda: 0.5
+  mg_lambda: 1.0
   imag_horizon: 15
   imag_gradient: 'dynamics'
   imag_gradient_mix: 0.0
