--- a/configs.yaml
+++ b/configs.yaml
@@ -18,7 +18,7 @@ defaults:
   precision: 32
   debug: False
   video_pred_log: True
-  algorithm: 'dreamer'
+  algorithm: 'switch_dreamer'
   output: 'wandb'
 
   # Environment
